--- a/index_2026.html
+++ b/index_2026.html
@@ -9,103 +9,51 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 
 <style>
-body {
-    margin: 0;
-    font-family: "Segoe UI", Arial, sans-serif;
-    background: #f4f6f9;
-    color: #1f2937;
-}
+body { margin: 0; font-family: "Segoe UI", Arial, sans-serif; background: #f4f6f9; color: #1f2937; }
 
-/* ===== TOPBAR ===== */
-.topbar {
-    background: #1e3a8a;
-    color: white;
-    padding: 15px 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
+/* TOPBAR */
+.topbar { background: #1e3a8a; color: white; padding: 15px 30px; display: flex; align-items: center; justify-content: space-between; }
 .title { font-size: 20px; font-weight: 600; text-align: center; flex: 1; }
-
 .status { display: flex; align-items: center; gap: 10px; font-size: 14px; }
-
 .dot { width: 10px; height: 10px; border-radius: 50%; box-shadow: 0 0 8px; animation: pulse 1.5s infinite; }
 .dot.online { background: #22c55e; box-shadow: 0 0 8px #22c55e; }
 .dot.offline { background: #ef4444; box-shadow: 0 0 8px #ef4444; }
-
 @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.4; } 100% { opacity: 1; } }
 
-/* ===== CONTENT ===== */
+/* CONTENT */
 .container { padding: 30px; }
 .section-title { font-size: 18px; margin-bottom: 15px; font-weight: 600; color: #1e3a8a; }
 
-/* ===== CARTÕES ===== */
-.cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 20px;
-    margin-bottom: 40px;
-}
-
-.card {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    border-left: 6px solid #1e3a8a;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-    position: relative;
-}
-
+/* CARTÕES */
+.cards { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 20px; margin-bottom: 40px; }
+.card { background: white; padding: 20px; border-radius: 8px; border-left: 6px solid #1e3a8a; box-shadow: 0 2px 5px rgba(0,0,0,0.05); position: relative; }
 .card p { margin: 0; font-size: 14px; color: #6b7280; }
 .card h2 { margin: 8px 0 0 0; font-size: 26px; color: #111827; display: flex; align-items: center; gap: 10px; }
 
-/* BADGES NOS CARTÕES */
-.card .badge {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    display: inline-flex;
-    align-items: center;
-    gap: 5px;
-    padding: 3px 8px;
-    border-radius: 12px;
-    font-size: 12px;
-    font-weight: 600;
-    color: white;
-}
-
+/* BADGES */
+.card .badge { position: absolute; top: 15px; right: 15px; display: inline-flex; align-items: center; gap: 5px; padding: 3px 8px; border-radius: 12px; font-size: 12px; font-weight: 600; color: white; }
 .badge.incendios { background: #ef4444; }
 .badge.aereos { background: #3b82f6; }
 .badge.terrestres { background: #f97316; }
 .badge.aquaticos { background: #22c55e; }
 .badge.significativas { background: #6b7280; }
+.badge.operacionais { background: #1e40af; }
 
-/* ===== FILTROS + MAPA ===== */
+/* FILTROS + MAPA */
 .filters-map-container { display: flex; gap: 20px; margin-bottom: 40px; flex-wrap: wrap; }
-.filters {
-    flex: 1 1 250px;
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-}
+.filters { flex: 1 1 250px; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
 .filters label { display: block; margin-bottom: 10px; font-size: 14px; }
-.filters select {
-    width: 100%; padding: 6px; margin-top: 4px; margin-bottom: 12px;
-    border-radius: 4px; border: 1px solid #d1d5db;
-}
+.filters select { width: 100%; padding: 6px; margin-top: 4px; margin-bottom: 12px; border-radius: 4px; border: 1px solid #d1d5db; }
 .filters button { padding: 8px 12px; background: #1e3a8a; color: white; border: none; border-radius: 4px; cursor: pointer; }
-
 .map-container { flex: 3 1 600px; }
 
-/* ===== TABELA ===== */
+/* TABELA */
 table { width: 100%; border-collapse: collapse; background: white; margin-bottom: 40px; }
 th { background: #e5e7eb; padding: 12px; text-align: left; font-size: 14px; }
 td { padding: 10px; border-bottom: 1px solid #e5e7eb; font-size: 13px; }
 tr:hover { background: #f9fafb; }
 
-/* ===== BADGES DE ESTADO ===== */
+/* BADGES DE ESTADO */
 .estado-badge { display:inline-block; padding:4px 10px; border-radius:12px; font-size:12px; font-weight:600; text-align:center; min-width:90px; }
 .em-curso { background:#ef4444; color:#fff; }
 .despacho { background:#f97316; color:#000; }
@@ -113,10 +61,10 @@ tr:hover { background: #f9fafb; }
 .em-resolucao { background:#3b82f6; color:#fff; }
 .em-conclusao { background:#22c55e; color:#000; }
 
-/* ===== MAP ===== */
+/* MAP */
 #map { height: 450px; border-radius: 8px; }
 
-/* ===== FOOTER ===== */
+/* FOOTER */
 footer { text-align: center; padding: 15px; background: #1e3a8a; color: white; font-size: 12px; }
 
 </style>
@@ -143,7 +91,7 @@ footer { text-align: center; padding: 15px; background: #1e3a8a; color: white; f
         <div class="card">
             <p>Total Operacionais</p>
             <h2 id="totalOperacionais"><i class="fas fa-hat-firefighter"></i> 0</h2>
-            <span class="badge terrestres"><i class="fas fa-truck"></i> Terrestres</span>
+            <span class="badge operacionais"><i class="fas fa-users"></i> Operacionais</span>
         </div>
         <div class="card">
             <p>Total Veículos</p>
